--- a/source/Preprocessing.ipynb
+++ b/source/Preprocessing.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "4a93c645",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime"
+    "import datetime\n",
+    "from sklearn.utils import resample\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "5bed87ab",
    "metadata": {},
    "outputs": [
@@ -234,7 +235,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "2ddce043",
    "metadata": {},
    "outputs": [
@@ -467,7 +468,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "5bb8e9d0",
    "metadata": {},
    "outputs": [
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "5ea538e9",
    "metadata": {},
    "outputs": [],
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "59dd8fb5",
    "metadata": {},
    "outputs": [
@@ -541,7 +542,7 @@
        "Name: amt, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "46bdcb82",
    "metadata": {},
    "outputs": [],
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "85575e60",
    "metadata": {},
    "outputs": [
@@ -782,7 +783,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "bd1f207b",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1016,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "ee4ee5f7",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "a86389d8",
    "metadata": {},
    "outputs": [],
@@ -1071,41 +1072,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
+   "id": "cb30aa29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_majority = raw_df[raw_df.is_fraud == 0]\n",
+    "df_minority = raw_df[raw_df.is_fraud == 1]\n",
+    "\n",
+    "df_minority_upsampled = resample(df_minority, \n",
+    "                                 replace=True,   \n",
+    "                                 n_samples=len(df_majority),  \n",
+    "                                 random_state=42) \n",
+    "\n",
+    "df_upsampled = pd.concat([df_majority, df_minority_upsampled])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "efe04d99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    555719.000000\n",
-       "mean         69.392810\n",
-       "std         156.745941\n",
-       "min           1.000000\n",
-       "25%           9.630000\n",
-       "50%          47.290000\n",
-       "75%          83.010000\n",
-       "max       22768.110000\n",
+       "count    1.107148e+06\n",
+       "mean     2.979144e+02\n",
+       "std      3.765026e+02\n",
+       "min      1.000000e+00\n",
+       "25%      2.071000e+01\n",
+       "50%      8.847000e+01\n",
+       "75%      4.613300e+02\n",
+       "max      2.276811e+04\n",
        "Name: amt, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_df['amt'].describe()"
+    "df_upsampled['amt'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "0e733666",
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_df.to_csv('../data/processed/fraudTest.csv', index= False)"
+    "df_upsampled.to_csv('../data/processed/fraudTest.csv', index= False)"
    ]
   }
  ],
