--- a/source/Producer.ipynb
+++ b/source/Producer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 55,
    "id": "3e3b9d7f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 56,
    "id": "943814cb",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 57,
    "id": "6243f523",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 58,
    "id": "2cfeb858",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "4  1371816917  44.959148  -85.884734         0  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 59,
    "id": "bb27d913",
    "metadata": {},
    "outputs": [
@@ -417,24 +417,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 555719 entries, 0 to 555718\n",
+      "RangeIndex: 1107148 entries, 0 to 1107147\n",
       "Data columns (total 12 columns):\n",
-      " #   Column      Non-Null Count   Dtype  \n",
-      "---  ------      --------------   -----  \n",
-      " 0   merchant    555719 non-null  int64  \n",
-      " 1   category    555719 non-null  int64  \n",
-      " 2   amt         555719 non-null  float64\n",
-      " 3   gender      555719 non-null  int64  \n",
-      " 4   lat         555719 non-null  float64\n",
-      " 5   long        555719 non-null  float64\n",
-      " 6   city_pop    555719 non-null  int64  \n",
-      " 7   job         555719 non-null  int64  \n",
-      " 8   unix_time   555719 non-null  int64  \n",
-      " 9   merch_lat   555719 non-null  float64\n",
-      " 10  merch_long  555719 non-null  float64\n",
-      " 11  is_fraud    555719 non-null  int64  \n",
+      " #   Column      Non-Null Count    Dtype  \n",
+      "---  ------      --------------    -----  \n",
+      " 0   merchant    1107148 non-null  int64  \n",
+      " 1   category    1107148 non-null  int64  \n",
+      " 2   amt         1107148 non-null  float64\n",
+      " 3   gender      1107148 non-null  int64  \n",
+      " 4   lat         1107148 non-null  float64\n",
+      " 5   long        1107148 non-null  float64\n",
+      " 6   city_pop    1107148 non-null  int64  \n",
+      " 7   job         1107148 non-null  int64  \n",
+      " 8   unix_time   1107148 non-null  int64  \n",
+      " 9   merch_lat   1107148 non-null  float64\n",
+      " 10  merch_long  1107148 non-null  float64\n",
+      " 11  is_fraud    1107148 non-null  int64  \n",
       "dtypes: float64(5), int64(7)\n",
-      "memory usage: 50.9 MB\n"
+      "memory usage: 101.4 MB\n"
      ]
     }
    ],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 60,
    "id": "8b5d140c",
    "metadata": {},
    "outputs": [
@@ -455,12 +455,14 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[186]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     26\u001b[39m     producer.produce(\n\u001b[32m     27\u001b[39m     topic= topic,\n\u001b[32m     28\u001b[39m     value= json.dumps(transaction).encode(\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     29\u001b[39m     )\n\u001b[32m     30\u001b[39m     producer.poll(\u001b[32m0\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m     time.sleep(\u001b[32m0.01\u001b[39m)\n\u001b[32m     33\u001b[39m producer.flush()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[60]\u001b[39m\u001b[32m, line 33\u001b[39m\n\u001b[32m     28\u001b[39m     producer.produce(\n\u001b[32m     29\u001b[39m     topic= topic,\n\u001b[32m     30\u001b[39m     value= json.dumps(transaction).encode(\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     31\u001b[39m     )\n\u001b[32m     32\u001b[39m     producer.poll(\u001b[32m0\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m     time.sleep(\u001b[32m0.01\u001b[39m)\n\u001b[32m     35\u001b[39m producer.flush()\n",
       "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
+    "sam_test_df = test_df.sample(n = 10000, random_state= 42)\n",
+    "\n",
     "admin_client = AdminClient({'bootstrap.servers': 'localhost:9092'})\n",
     "\n",
     "topic = NewTopic('CCT', num_partitions=3, replication_factor=1)\n",
@@ -470,7 +472,7 @@
     "\n",
     "topic = 'CCT'\n",
     "\n",
-    "for index, row in test_df.iterrows():\n",
+    "for index, row in sam_test_df.iterrows():\n",
     "    transaction = {\n",
     "        \"merchant\": row['merchant'],\n",
     "        \"category\": row['category'],\n",
